dev/test_programs/INVALID/group1/blankid1.go
package main;

func main(){
	x := _;
}

